[project]
name = "langgraph-graph-state"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "headroom-ai[langchain]>=0.27.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langsmith>=0.9.3",
    "python-dotenv>=1.2.2",
]
